maneras de detectar el elemento con delegacion de evento

--- a/P03-creaElementosDesdeJs/practica/index.html
+++ b/P03-creaElementosDesdeJs/practica/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1 class="title">practica carrito de compra</h1>
+<!-- <h1 class="title">practica carrito de compra</h1>
 <main class="contentMain">
   <header class="contentMain__header">
     <article class="card">
@@ -37,7 +37,12 @@
     <span class="liProduct__product"></span>
     <span class="liProduct__amount"></span>
   </li>
-</template>
+</template> -->
+<div id="contentp" class="content">
+  <div class="content content--Bcolor1">
+    <div class="content content--Bcolor2" data-div="nieto"></div>
+  </div>
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
