feat: :fire: se creo la funcionalidad con js y se elimino archivos inecesarios
solunion un fallo con el js y se modifico para que funcionara

se elimino los archivos y se comenzo desde 0 el proyecto

--- a/practicaCarrito/index.html
+++ b/practicaCarrito/index.html
@@ -61,8 +61,8 @@
 						</li>
 						</template>
 					</ul>
-					<article class="lista__footer" id="listaFooter">
-						<template id="TotalPrecio">
+					<article class="lista__footer" id="footerCompra">
+						<template id="TotalPrecioTemplate">
 						<div class="footerTotal">
 							<p class="footerTotal__contentTotalPrecio">
 								Total: $<span class="footerTotal__precio">300</span>
