--- a/p05-callback,promesaYasyncAwait/asyncYawait/index.html
+++ b/p05-callback,promesaYasyncAwait/asyncYawait/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>callback</title>
+  <title>async y await</title>
 </head>
 <body>
-  <h1>promesas</h1>
+  <h1>async y await</h1>
   <script src="app.js" type="module"></script>
 </body>
 </html>
