--- a/inde.html
+++ b/inde.html
@@ -2,13 +2,14 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>pranctica 01</title>
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<script src="js/index.js"></script>
 	</body>
 </html>
