--- a/inde.html
+++ b/inde.html
@@ -2,13 +2,36 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>Color picker</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<main class="contentColor" id="contentColor">
+			<header class="selectColor">
+				<label for="color" class="selectColor__label"
+					>Color picker</label
+				>
+				<input
+					id="color"
+					type="color"
+					class="selectColor__inputColor"
+					value="#23B340"
+				/>
+				<button class="selectColor__btn" id="btn">Visualizar</button>
+			</header>
+			<footer class="viewColor">
+				<p class="viewColor__text">#23b340</p>
+				<div
+					class="viewColor__colorBg"
+					style="background-color: #23b340"
+				></div>
+			</footer>
+		</main>
+		<script src="js/main.js"></script>
 	</body>
 </html>
