--- a/inde.html
+++ b/inde.html
@@ -2,13 +2,16 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>Crear elemtento con createElemenr</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<ul id="lista"></ul>
+		<script src="js/main.js"></script>
 	</body>
 </html>
