--- a/inde.html
+++ b/inde.html
@@ -7,11 +7,17 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Crear elemtento con createElemenr</title>
+		<title>Crear elementos con template</title>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<ul id="lista"></ul>
+		<template id="liTemplate">
+			<li class="list">
+				<b>País: </b>
+				<span class="text-primary"> </span>
+			</li>
+		</template>
 		<script src="js/main.js"></script>
 	</body>
 </html>
