--- a/inde.html
+++ b/inde.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,15 +7,37 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Crear elementos con template</title>
+		<title>practica</title>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<ul id="lista"></ul>
-		<template id="liTemplate">
-			<li class="list">
-				<b>País: </b>
-				<span class="text-primary"> </span>
+		<h1 class="title">practica carrito de compra</h1>
+		<main class="contentMain">
+			<header class="contentMain__header">
+				<article class="card">
+					<h2 class="card__title">Fresa 🍓</h2>
+					<button class="card__btn" data-fruta="Fresa">Add</button>
+				</article>
+				<article class="card">
+					<h2 class="card__title">Banana 🍌</h2>
+					<button class="card__btn" data-fruta="Banana">Add</button>
+				</article>
+				<article class="card">
+					<h2 class="card__title">Manzana 🍏</h2>
+					<button class="card__btn" data-fruta="Manzana">Add</button>
+				</article>
+			</header>
+			<footer class="contentMain__footer">
+				<article class="lista">
+					<h2 class="lista__tilte">lista de compra</h2>
+					<ul class="lista__ul" id="lista"></ul>
+				</article>
+			</footer>
+		</main>
+		<template id="liTemplete">
+			<li class="liProduct">
+				<span class="liProduct__product"></span>
+				<span class="liProduct__amount"></span>
 			</li>
 		</template>
 		<script src="js/main.js"></script>
