--- a/inde.html
+++ b/inde.html
@@ -6,9 +6,35 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>rick and morty</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<div class="loan" id="loan"></div>
+		<header class="header">
+			<h1 class="title">Consumir API de rick and morty</h1>
+		</header>
+		<main class="main">
+			<section id="btnsPrNe"></section>
+			<section class="sectionCard" id="contentCard"></section>
+		</main>
+		<template id="btnT">
+			<article class="contentBtns">
+				<button class="btn" id="prev">prev</button>
+				<button class="btn" id="next">next</button>
+			</article>
+		</template>
+		<template id="cardT">
+			<section class="card">
+				<header class="card__header">
+					<img src="" alt="imagen" class="card__img" />
+				</header>
+				<footer class="card__main">
+					<h2 class="card__titleCard">nombre</h2>
+					<p class="card__subTitelCard">especie</p>
+				</footer>
+			</section>
+		</template>
+		<script src="js/app.js"></script>
 	</body>
 </html>
