Ejercicio terminado. practica pasar las class a archivos modulares

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<body>
 		<header class="header">
 			<h1 class="header__title">Agrega Estudiantes y Profesores</h1>
+			<div class="alert" id="alert">
+				<p class="alert__text">algún campo esta vacío</p>
+			</div>
 			<form action="#" class="form" id="form">
 				<input
 					type="text"
