--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>Modulos</title>
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<h1>Modulos</h1>
+		<script src="./js/app.js" type="module"></script>
 	</body>
 </html>
