--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>primer repaso</title>
+		<title>modulos</title>
 	</head>
 	<body>
-		<h1>primer repaso</h1>
+		<h1>modulos</h1>
+		mporn
+		<script type="module" src="./js/app.js"></script>
 	</body>
 </html>
